--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -1,5 +1,24 @@
 <%- include('../partials/user/header') %>
 
+<style>
+  
+  .new-tag {
+    display: inline-block;
+    background-color: #209e1c; /* Red background */
+    color: white;
+    font-size: 14px;
+    font-weight: bold;
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-transform: uppercase;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
+
+</style>
+
 <!-- Begin Hiraola's Breadcrumb Area -->
 <div class="breadcrumb-area">
   <div class="container">
@@ -40,6 +59,15 @@
             <a class="active grid-3" data-target="gridview-3" data-toggle="tooltip" data-placement="top" title="Grid View"><i class="fa fa-th"></i></a>
             <a class="list" data-target="listview" data-toggle="tooltip" data-placement="top" title="List View"><i class="fa fa-th-list"></i></a>
           </div>
+          <div class="product-sorting-box">
+            <select id="sortSelect" class="form-control" onchange="sortProducts()">
+              <option value="">Sort By</option>
+              <option value="a-z" <%= sort === 'a-z' ? 'selected' : '' %>>Sort by Name: A-Z</option>
+              <option value="z-a" <%= sort === 'z-a' ? 'selected' : '' %>>Sort by Name: Z-A</option>
+              <option value="l-h" <%= sort === 'l-h' ? 'selected' : '' %>>Sort by Price: Low to High</option>
+              <option value="h-l" <%= sort === 'h-l' ? 'selected' : '' %>>Sort by Price: High to Low</option>
+            </select>
+          </div>
         </div>
         <div class="shop-product-wrap grid gridview-3 row">
           <% products.forEach(product => { %>
@@ -50,7 +78,18 @@
                     <a href="/singleproduct/<%= product._id %>">
                       <img class="primary-img" src="/<%= product.productImage[0] %>" alt="<%= product.productName %>">
                     </a>
-                    <span class="sticker">New</span>
+                    <% if (product.createdAt) { 
+                      const createdAtDate = new Date(product.createdAt);
+                      const fiveDaysAgo = new Date();
+                      fiveDaysAgo.setDate(fiveDaysAgo.getDate() - 7);
+                 
+                      if (createdAtDate >= fiveDaysAgo) { 
+                 %>
+                     <div class="new-tag">New!</div>
+                 <% 
+                     } 
+                 } 
+                 %>
                     <div class="add-actions">
                       <ul>
                         <li><a class="hiraola-add_cart" href="#" data-bs-toggle="tooltip" data-placement="top" title="Add To Cart"><i class="ion-bag"></i></a></li>
@@ -77,15 +116,15 @@
                       </div>
                       <div class="additional-add_action">
                         <ul>
-                            <li>
-                                <a class="hiraola-add_compare" href="#" data-bs-toggle="tooltip" data-placement="top" 
-                                   title="<%= userWishlist && userWishlist.includes(product._id.toString()) ? 'Remove from Wishlist' : 'Add To Wishlist' %>" 
-                                   data-product-id="<%= product._id %>">
-                                    <i class="<%= userWishlist && userWishlist.includes(product._id.toString()) ? 'ion-android-favorite' : 'ion-android-favorite-outline' %>"></i>
-                                </a>
-                            </li>
+                          <li>
+                            <a class="hiraola-add_compare" href="#" data-bs-toggle="tooltip" data-placement="top" 
+                               title="<%= userWishlist && userWishlist.includes(product._id.toString()) ? 'Remove from Wishlist' : 'Add To Wishlist' %>" 
+                               data-product-id="<%= product._id %>">
+                              <i class="<%= userWishlist && userWishlist.includes(product._id.toString()) ? 'ion-android-favorite' : 'ion-android-favorite-outline' %>"></i>
+                            </a>
+                          </li>
                         </ul>
-                    </div>
+                      </div>
                       <div class="rating-box">
                         <ul>
                           <li><i class="fa fa-star-of-david"></i></li>
@@ -109,19 +148,19 @@
                 <div class="col-lg-6 col-md-6 col-sm-6">
                   <ul class="hiraola-pagination-box">
                     <% if (currentPage > 1) { %>
-                      <li><a href="/shop?page=1">|<</a></li>
-                      <li><a class="Previous" href="/shop?page=<%= currentPage - 1 %>"><i class="ion-ios-arrow-left"></i></a></li>
+                      <li><a href="/shop?page=1<%= sort ? '&sort=' + sort : '' %>">|<</a></li>
+                      <li><a class="Previous" href="/shop?page=<%= currentPage - 1 %><%= sort ? '&sort=' + sort : '' %>"><i class="ion-ios-arrow-left"></i></a></li>
                     <% } %>
                     <% for(let i = 1; i <= totalPages; i++) { %>
                       <% if (i === currentPage) { %>
                         <li class="active"><a href="javascript:void(0)"><%= i %></a></li>
                       <% } else { %>
-                        <li><a href="/shop?page=<%= i %>"><%= i %></a></li>
+                        <li><a href="/shop?page=<%= i %><%= sort ? '&sort=' + sort : '' %>"><%= i %></a></li>
                       <% } %>
                     <% } %>
                     <% if (currentPage < totalPages) { %>
-                      <li><a class="Next" href="/shop?page=<%= currentPage + 1 %>"><i class="ion-ios-arrow-right"></i></a></li>
-                      <li><a href="/shop?page=<%= totalPages %>">|></a></li>
+                      <li><a class="Next" href="/shop?page=<%= currentPage + 1 %><%= sort ? '&sort=' + sort : '' %>"><i class="ion-ios-arrow-right"></i></a></li>
+                      <li><a href="/shop?page=<%= totalPages %><%= sort ? '&sort=' + sort : '' %>">|></a></li>
                     <% } %>
                   </ul>
                 </div>
@@ -145,6 +184,22 @@
 <%- include('../partials/user/footer') %>
 
 <script>
+  function sortProducts() {
+    const sortSelect = document.getElementById('sortSelect');
+    const sortOption = sortSelect.value;
+    const currentUrl = new URL(window.location.href);
+    
+    if (sortOption) {
+      currentUrl.searchParams.set('sort', sortOption);
+      currentUrl.searchParams.set('page', '1'); // Reset to page 1 when sorting changes
+    } else {
+      currentUrl.searchParams.delete('sort');
+    }
+    
+    window.location.href = currentUrl.toString();
+  }
+
+  // Existing wishlist script from previous implementation
   document.addEventListener('DOMContentLoaded', function () {
     const wishlistButtons = document.querySelectorAll('.hiraola-add_compare');
 
