--- a/views/user/changepassword.ejs
+++ b/views/user/changepassword.ejs
@@ -51,15 +51,15 @@
                                             <div class="hiraola-form-inner">
                                                 <div class="single-input">
                                                     <label for="current-pwd">Current Password</label>
-                                                    <input type="password" id="current-pwd" name="current_password" required>
+                                                    <input type="password" id="current-pwd" name="current_password">
                                                 </div>
                                                 <div class="single-input">
                                                     <label for="new-pwd">New Password</label>
-                                                    <input type="password" id="new-pwd" name="new_password" required>
+                                                    <input type="password" id="new-pwd" name="new_password">
                                                 </div>
                                                 <div class="single-input">
                                                     <label for="confirm-pwd">Confirm New Password</label>
-                                                    <input type="password" id="confirm-pwd" name="confirm_password" required>
+                                                    <input type="password" id="confirm-pwd" name="confirm_password">
                                                 </div>
                                                 <div class="single-input">
                                                     <button class="edit-btn" type="submit">Save Changes</button>
